# svdot

./: .bash_aliases  .bashrc  .bashrc.orig  .gitignore  .inputrc  .tmux.conf  .vimrc  .vimrc.orig  CMakeHelpers.cmake  CMakeLists  CMakeLists.txt  README.md  SvHelpers.cmake  apps.xml  bash_aliases  bash_functions  bash_local  bashrc  bundles  cmk  condarc  create_container.sh  darcula.xml  default.xml  deploy.bash  deploy.sh  dot_inputrc  environment.yml  gitconfig  gitignore  gruvbox-dark.xml  inputrc  install-pkg  install-pkg.bash  install-pkg.sh  latex.mk  manifest.xml  mex.mk  profile  promptline.sh  (+15 more)
dotfiles/: README.md  aerial.sh  bash_aliases  bash_functions  bash_local  bashrc  bundles  clang-format  deploy.sh  gdbinit  gitconfig  gitignore  init.vim  inputrc  install-pkg.sh  promptline.sh  redshift.conf  steadicam.sh  tmux.conf  tmuxline  updatedb.conf  vimrc
misc/: BazelHelpers.cmake  CMakeHelpers.cmake  apps.yaml  base.yml  environment.yml  ros1n.yml  svbuild  torch.yml
powerline-shell/: config.json  powerline-shell
styles/: clang-tidy  cmake-format.yaml  gruvbox-dark.xml  onedark.xml
tool/: svbuild
utils/: CMakeLists.txt  mex.mk
